fixed bug with not showing ul tags in bullet attachments (though not bilag)

--- a/css/global.css
+++ b/css/global.css
@@ -129,6 +129,15 @@ body{
   list-style: circle inside none;
 }
 
+/* Showing list number in attachment preview */
+.attachment_text_full_container ol li {
+  list-style: decimal inside none;
+}
+
+.attachment_text_full_container ul li {
+  list-style: circle inside none;
+}
+
 /* Links in attachment preview */
 table.views-table tr td .attachment_text_trimmed_container a:link, table.views-table tr td .attachment_text_trimmed_container a:visited , 
 table.views-table tr td .attachment_text_full_container a:link, table.views-table tr td .attachment_text_full_container a:visited ,
